--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,7 @@
 @import './sass/section1';
 @import './sass/section2';
 @import './sass/section4';
+@import './sass/section5';
 
 
 body{
@@ -23,5 +24,9 @@ body{
 
     .section4{
         @include section4;
+    }
+
+    .section5{
+        @include section5;
     }
 }
