--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ body .section5 .brands {
 }
 body .section6 {
   padding-top: 5vh;
+  padding-bottom: 5vh;
 }
 body .section6 .contact {
   padding-bottom: 4vh;
@@ -210,4 +211,42 @@ body .section6 .contentContact .send {
 body .section6 .contentContact .send button {
   background-color: #FFDA00;
   border-color: #FFDA00;
+}
+body .section7 {
+  background-color: #FFDA00;
+}
+body .section7 .contactDetails {
+  padding-top: 8vh;
+  padding-bottom: 8vh;
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+}
+body .section7 .contactDetails img {
+  height: 5vh;
+}
+body .section7 .contactDetails .whats {
+  width: 25%;
+  display: flex;
+  align-items: center;
+}
+body .section7 .contactDetails .mail {
+  width: 25%;
+  display: flex;
+  align-items: center;
+}
+body .section7 .contactDetails .globe {
+  width: 25%;
+  display: flex;
+  align-items: center;
+}
+body .section7 .contactDetails .globe p {
+  width: 40%;
+}
+body .footer {
+  padding-top: 8vh;
+  padding-bottom: 8vh;
+  background-color: #17191E;
+  color: #FFFFFF;
 }/*# sourceMappingURL=style.css.map */
