TP Final Montreal v13

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -41,6 +41,10 @@
                 right: 0;
                 top: 0;
             }
+
+            .icon:hover{
+                background-color: $contentColor;
+            }
         }
 
         .title {
