--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -5,4 +5,17 @@
     padding-bottom: 8vh;
     background-color: $primaryColor;
     color: $contentColor;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    p{
+        text-align: center;
+    }
+
+    .socialNetworks{
+        width: 8%;
+        display: flex;
+        justify-content: space-between;
+    }
 }
