--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,7 @@
 @import './sass/header';
 @import './sass/section1';
 @import './sass/section2';
+@import './sass/section3';
 @import './sass/section4';
 @import './sass/section5';
 @import './sass/section6';
@@ -23,6 +24,10 @@ body{
 
     .section2{
         @include section2;
+    }
+
+    .section3{
+        @include section3;
     }
 
     .section4{
