TP Final Montreal v16

--- a/sass/_section3.scss
+++ b/sass/_section3.scss
@@ -20,21 +20,9 @@
         h2{
             padding-top: 2vh;
         }
-        .projects {
+        #skill {
             width: 20%;
 
-        }
-
-        .coffee {
-            width: 20%;
-        }
-
-        .mail {
-            width: 20%;
-        }
-
-        .awards {
-            width: 20%;
         }
     }
 }
