--- a/sass/_section2.scss
+++ b/sass/_section2.scss
@@ -9,7 +9,7 @@
         width: 85%;
         margin: auto;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
 
         h2{
             color: $secondaryColor;
