TP Final Montreal v18

--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body header nav .topnav .icon {
 }
 body header nav .topnav .icon:hover {
   background-color: #FFFFFF;
+  color: #17191E;
 }
 body header nav .title {
   padding-top: 15vh;
