--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -44,6 +44,7 @@
 
             .icon:hover{
                 background-color: $contentColor;
+                color: $primaryColor;
             }
         }
 
