--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -21,6 +21,11 @@
                 margin: auto;
                 display: none;
 
+                // Responsive tablette 
+                @media (max-width: 992px) {
+                    width: 40%;
+                }
+
                 a {
                     color: white;
                     padding: 14px 16px;
@@ -31,7 +36,7 @@
 
             .icon {
                 height: 3vh;
-                width: 4%;
+                width: 3%;
                 margin-top: 2vh;
                 background: $secondaryColor;
                 color: $contentColor;
@@ -42,7 +47,7 @@
                 top: 0;
             }
 
-            .icon:hover{
+            .icon:hover {
                 background-color: $contentColor;
                 color: $primaryColor;
             }
@@ -57,6 +62,11 @@
             h1 {
                 color: $secondaryColor;
                 font-size: 8em;
+
+                // Responsive tablette 
+                @media (max-width: 992px) {
+                    font-size: 6em;
+                }
             }
 
             p {
