--- a/sass/_section2.scss
+++ b/sass/_section2.scss
@@ -5,16 +5,22 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
     .threeBoxes {
         width: 85%;
         margin: auto;
         display: flex;
         justify-content: space-around;
 
-        h2{
+        // Responsive tablette 
+        @media (max-width: 992px) {
+            width: 90%;
+        }
+
+        h2 {
             color: $secondaryColor;
         }
-        
+
         .design {
             width: 30%;
             margin: auto;
@@ -24,22 +30,42 @@
             img {
                 width: 8%;
                 height: 4vh;
+
+                // Responsive tablette 
+                @media (max-width: 992px) {
+                    width: 15%;
+                }
             }
 
             p {
                 width: 90%;
+
+                // Responsive tablette 
+                @media (max-width: 992px) {
+                    width: 70%;
+                }
             }
         }
 
         .coding {
-            width: 20%;
+            width: 30%;
             margin: auto;
             display: flex;
             flex-direction: column;
 
+            // Responsive tablette 
+            @media (max-width: 992px) {
+                padding-bottom: 6vh;
+            }
+
             img {
                 width: 12%;
                 height: 4vh;
+
+                // Responsive tablette 
+                @media (max-width: 992px) {
+                    width: 15%;
+                }
             }
         }
 
@@ -49,13 +75,28 @@
             display: flex;
             flex-direction: column;
 
+            // Responsive tablette 
+            @media (max-width: 992px) {
+                padding-top: 2vh;
+            }
+
             img {
                 width: 8%;
                 height: 4vh;
+
+                // Responsive tablette 
+                @media (max-width: 992px) {
+                    width: 15%;
+                }
             }
 
             p {
                 width: 80%;
+
+                // Responsive tablette 
+                @media (max-width: 992px) {
+                    width: 60%;
+                }
             }
         }
     }
@@ -63,7 +104,7 @@
     button {
         margin-top: 6vh;
         margin-bottom: 6vh;
-        width: 10%;
+        width: 20%;
         background-color: $contentColor;
         border-radius: 10px;
         border-color: $secondaryColor;
