--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@ body header nav .topnav #myLinks {
   margin: auto;
   display: none;
 }
+@media (max-width: 992px) {
+  body header nav .topnav #myLinks {
+    width: 40%;
+  }
+}
 body header nav .topnav #myLinks a {
   color: white;
   padding: 14px 16px;
@@ -32,7 +37,7 @@ body header nav .topnav #myLinks a {
 }
 body header nav .topnav .icon {
   height: 3vh;
-  width: 4%;
+  width: 3%;
   margin-top: 2vh;
   background: #FFDA00;
   color: #FFFFFF;
@@ -55,6 +60,11 @@ body header nav .title {
 body header nav .title h1 {
   color: #FFDA00;
   font-size: 8em;
+}
+@media (max-width: 992px) {
+  body header nav .title h1 {
+    font-size: 6em;
+  }
 }
 body header nav .title p {
   color: #FFFFFF;
@@ -88,6 +98,11 @@ body .section2 .threeBoxes {
   display: flex;
   justify-content: space-around;
 }
+@media (max-width: 992px) {
+  body .section2 .threeBoxes {
+    width: 90%;
+  }
+}
 body .section2 .threeBoxes h2 {
   color: #FFDA00;
 }
@@ -101,18 +116,38 @@ body .section2 .threeBoxes .design img {
   width: 8%;
   height: 4vh;
 }
+@media (max-width: 992px) {
+  body .section2 .threeBoxes .design img {
+    width: 15%;
+  }
+}
 body .section2 .threeBoxes .design p {
   width: 90%;
 }
+@media (max-width: 992px) {
+  body .section2 .threeBoxes .design p {
+    width: 70%;
+  }
+}
 body .section2 .threeBoxes .coding {
-  width: 20%;
+  width: 30%;
   margin: auto;
   display: flex;
   flex-direction: column;
 }
+@media (max-width: 992px) {
+  body .section2 .threeBoxes .coding {
+    padding-bottom: 6vh;
+  }
+}
 body .section2 .threeBoxes .coding img {
   width: 12%;
   height: 4vh;
+}
+@media (max-width: 992px) {
+  body .section2 .threeBoxes .coding img {
+    width: 15%;
+  }
 }
 body .section2 .threeBoxes .apps {
   width: 30%;
@@ -120,17 +155,32 @@ body .section2 .threeBoxes .apps {
   display: flex;
   flex-direction: column;
 }
+@media (max-width: 992px) {
+  body .section2 .threeBoxes .apps {
+    padding-top: 2vh;
+  }
+}
 body .section2 .threeBoxes .apps img {
   width: 8%;
   height: 4vh;
 }
+@media (max-width: 992px) {
+  body .section2 .threeBoxes .apps img {
+    width: 15%;
+  }
+}
 body .section2 .threeBoxes .apps p {
   width: 80%;
+}
+@media (max-width: 992px) {
+  body .section2 .threeBoxes .apps p {
+    width: 60%;
+  }
 }
 body .section2 button {
   margin-top: 6vh;
   margin-bottom: 6vh;
-  width: 10%;
+  width: 20%;
   background-color: #FFFFFF;
   border-radius: 10px;
   border-color: #FFDA00;
@@ -174,6 +224,11 @@ body .section4 .works {
   width: 80%;
   margin: auto;
 }
+@media (max-width: 992px) {
+  body .section4 .works {
+    width: 90%;
+  }
+}
 body .section4 .works h3 {
   color: #FFDA00;
   padding-bottom: 3vh;
@@ -181,8 +236,20 @@ body .section4 .works h3 {
 body .section4 .works p {
   width: 50%;
 }
+@media (max-width: 992px) {
+  body .section4 .works p {
+    width: 70%;
+  }
+}
 body .section4 .pictures {
+  width: 80%;
+  margin: auto;
   display: flex;
+}
+@media (max-width: 992px) {
+  body .section4 .pictures {
+    width: 100%;
+  }
 }
 body .section5 {
   background-color: #17191E;
