--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -17,5 +17,10 @@
         width: 8%;
         display: flex;
         justify-content: space-between;
+
+        // Responsive tablette 
+        @media (max-width: 992px) {
+            width: 14%;
+        }
     }
 }
